Rename topology APIs to service maps
